--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,10 +3,7 @@ name: Pages
 on:
   push:
     branches:
-      - master # default branch
-      
-permissions: write-all
-
+      - main # default branch
 
 jobs:
   build:
@@ -17,11 +14,10 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           # If your repository depends on submodule, please see: https://github.com/actions/checkout
           submodules: recursive
-      - uses: nikeee/setup-pandoc@v1
-      - name: Use Node.js 18.x
+      - name: Use Node.js 16.x
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
+          node-version: '16'
       - name: Cache NPM dependencies
         uses: actions/cache@v2
         with:
