--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,23 +1,20 @@
 name: Pages
-
 on:
   push:
     branches:
       - master # default branch
-
 jobs:
-  build:
+  pages:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
-      - uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          # If your repository depends on submodule, please see: https://github.com/actions/checkout
-          submodules: recursive
-      - name: Use Node.js 16.x
+      - uses: actions/checkout@v2
+      - uses: nikeee/setup-pandoc@v1
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v2
         with:
-          node-version: '16'
+          node-version: "18"
       - name: Cache NPM dependencies
         uses: actions/cache@v2
         with:
@@ -29,20 +26,8 @@ jobs:
         run: npm install
       - name: Build
         run: npm run build
-      - name: Upload Pages artifact
-        uses: actions/upload-pages-artifact@v2
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          path: ./public
-  deploy:
-    needs: build
-    permissions:
-      pages: write
-      id-token: write
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
