--- a/themes/particlex/_config.yml
+++ b/themes/particlex/_config.yml
@@ -53,8 +53,7 @@ menu:
 card:
     enable: true
     description: |
-        —— 楽しいですか？
-        —— 楽しいよ、たきなといれはさ。
+        七九五十三。
     iconLinks:
     friendLinks:
 
