--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,9 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 'LycoReco SN 支部'
+title: '星空之下'
 subtitle: '童年的小翼龙 的博客'
-description: 'SlongodのBlog'
+description: ''
 keywords:
 author: Slongod
 language: zh-Hans
